k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wax
  namespace: wax
spec:
  selector:
    app: wax
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
